[tool.poetry]
name = "earningsgpt"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain = "^0.0.160"
python = "^3.10"
requests = "^2.30.0"
openai = "^0.27.6"
tiktoken = "^0.3.3"
pandas = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
