[tool.poetry]
name = "earningsgpt"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
langchain = "^0.0.160"
openai = "^0.27.6"
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.30.0"
tiktoken = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
