[tool.poetry]
name = "earningsgpt"
version = "0.1.0"
description = ""
authors = ["sieginglion <sieginglion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.6.1"
langchain = "^0.0.219"
more-itertools = "^9.1.0"
openai = "^0.27.8"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
